shiftmodel overflow fix

--- a/frontend/src/components/ShiftModal.css
+++ b/frontend/src/components/ShiftModal.css
@@ -18,7 +18,9 @@ body {
     z-index: 1000; /* Make sure it's on top */
   }
   
-  .modal-content {
+.modal-content {
+  max-height: 90vh;
+  overflow-y: auto;
     background-color: #f9f9f9;
     padding: 20px 30px;
     border-radius: 12px;
